# Q3_data_collection

./: .gitignore  .gitmodules
.agent-docs/: _config.md  current-vs-ideal-data-capture-gaps.zh-CN.md  data-capture-clean-structure-plan.zh-CN.md  data-capture-runtime-analysis.zh-CN.md  ideal-data-capture-chain-and-current-gaps.zh-CN.md  index.md  offline-controller-axis-overlay.md  q3-data-collection-project-introduction.zh-CN.md  quest-apk-data-capture-debug-principles.zh-CN.md  stage3-time-alignment-upgrade-plan.zh-CN.md
.agent-docs/assets/: data-capture-scriptable-objects.md
.agent-docs/scenes/: _flow.md  sample-scene.md
.agent-docs/systems/: data-capture-full-chain.md  encoding-layer-current-state.md  stage-04-encoding-flow-analysis.zh-CN.md  stage-04-single-encode-production.md
Assets/Editor/: CodexPlayModeAutomation.cs  MetaXrGuideWindowFix.cs  PlayModeViewCrashWorkaround.cs  Q3DataCaptureBuild.cs
Assets/PassthroughLayerCompositor/: PassthroughAlphaComposite.shader  PassthroughCameraLayerCompositor.cs  PassthroughCompositeSequenceRecorder.cs
Assets/Resources/: OculusRuntimeSettings.asset
Assets/SObasic/: README.md
Assets/Scenes/: New Scene.unity  SampleScene.unity  SingleEncodePcSmoke.unity
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Native/Q3VulkanBridge/: CMakeLists.txt  build-android-arm64.ps1  q3dc_vulkan_bridge.cpp
PCReceiver/: README.md  offline_controller_axis_overlay.py  q3dc_receiver.py  q3dc_receiver_gui.py
ProjectSettings/: EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
(+333 files in other folders)
